--- a/structs/Cargo.toml
+++ b/structs/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 lazy_static = "1.4.0"
 rand = "0.8.5"
 rayon = "1.5.1"
+serde = { version = "1.0.137", features = ["derive"] }
 thiserror = "1.0.30"
